#The CMake Minimum version that is required. 
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)


add_subdirectory(PerformanceBodyInit)
add_subdirectory(PerformanceContactInit)
add_subdirectory(PerformanceContactIteration)
add_subdirectory(PerformanceConvergenceCheck)
add_subdirectory(PerformanceJORProxVel)
add_subdirectory(PerformanceReduction)
add_subdirectory(PerformanceRunAll)